Made all the links live

--- a/appendix1.qmd
+++ b/appendix1.qmd
@@ -2,8 +2,7 @@
 title: "Appendix 1: The Manuscripts"
 ---
 
-Accessing medieval manuscripts is never without challenges. While advancements in digitization and cataloging have made many manuscripts more visible than ever, researchers still face significant barriers and unforeseeable obstacles. Under normal circumstances, every Version T manuscript may be consulted by researchers in person, but my attempts to access the sole copy housed at the British Library highlight the precariousness of even the best-laid plans for in-person consultation. My first visit to the BL in late September 2022 was curtailed by the closure of public buildings for the funeral of Queen Elizabeth II, limiting my time with MS Additional 36614 to less than an hour. A second trip in late November 2023 — meticulously planned almost a year in advance — again proved fruitless in the aftermath of the October 2023 cyberattack on the British Library.^[ An incident review of the October 2023 cyber attack was released by the British Library in March 2024. The report provides information regarding the nature of the attack, its scope, the immediate response, and the Library’s plans for recovery and prevention. https://www.bl.uk/home/british-library-cyber-incident-review-8-march-2024.pdf/
-] For months, this attack not only made it impossible to retrieve manuscripts for consultation in the reading room but also limited access to the detailed information of the library’s digital and analog records, and this attack has made it impossible to purchase any reproductions of manuscripts from the BL’s Image Licensing Department. Despite the staff’s best efforts to help me make the most of my visit in 2023,^[ In addition to MS Additional 36614, I was hoping to consult five other manuscripts held at the BL. It was impossible under the circumstances to retrieve the original manuscripts, but I was offered the possibility of consulting the microfilms, which could be found using their card catalog. Out of the six manuscripts I hoped to see, only one (MS Old Royal 20 D VI, which contains a copy of Version Z of *La vie de sainte Marie l’Égyptienne*) was available in this format. I was told not to go out and buy a lottery ticket any time soon by a sympathetic staff member.
+Accessing medieval manuscripts is never without challenges. While advancements in digitization and cataloging have made many manuscripts more visible than ever, researchers still face significant barriers and unforeseeable obstacles. Under normal circumstances, every Version T manuscript may be consulted by researchers in person, but my attempts to access the sole copy housed at the British Library highlight the precariousness of even the best-laid plans for in-person consultation. My first visit to the BL in late September 2022 was curtailed by the closure of public buildings for the funeral of Queen Elizabeth II, limiting my time with MS Additional 36614 to less than an hour. A second trip in late November 2023 — meticulously planned almost a year in advance — again proved fruitless in the aftermath of the October 2023 cyberattack on the British Library.^[An incident review of the October 2023 cyber attack was released by the British Library in March 2024. The report provides information regarding the nature of the attack, its scope, the immediate response, and the Library’s plans for recovery and prevention. <https://www.bl.uk/home/british-library-cyber-incident-review-8-march-2024.pdf/>] For months, this attack not only made it impossible to retrieve manuscripts for consultation in the reading room but also limited access to the detailed information of the library’s digital and analog records, and this attack has made it impossible to purchase any reproductions of manuscripts from the BL’s Image Licensing Department. Despite the staff’s best efforts to help me make the most of my visit in 2023,^[ In addition to MS Additional 36614, I was hoping to consult five other manuscripts held at the BL. It was impossible under the circumstances to retrieve the original manuscripts, but I was offered the possibility of consulting the microfilms, which could be found using their card catalog. Out of the six manuscripts I hoped to see, only one (MS Old Royal 20 D VI, which contains a copy of Version Z of *La vie de sainte Marie l’Égyptienne*) was available in this format. I was told not to go out and buy a lottery ticket any time soon by a sympathetic staff member.
 ] this one T-manuscript remained out of my reach. These experiences underscore the critical value of supplemental resources: while not every interested reader can consult their manuscripts firsthand, many benefit from the carefully recorded observations of those lucky enough to work with these precious objects.  
 
 This appendix aims to bridge gaps in accessibility by providing detailed information about each manuscript in the T corpus. Drawing on my own direct observations — conducted generally under more favorable conditions than those described above — as well as the invaluable work of previous catalogers and editors,^[ These works include digitized and microfilm reproductions, detailed catalog records both online and in print, and other useful studies.
@@ -25,7 +24,7 @@ There are, in all, eight known manuscripts of Version T, including two fragments
 
 **T-F^2^**: The location of the original fragment — dated to the second half of the 12th century and most likely originating in Europe — is unknown, but a photographic copy may be found here:\
 
-> Berlin, Staatsbibliothek, *Photographien von ausgewählten Fragmenten aus der Omayyaden-Moschee in Damaskus in verschiedenen Sprachen*, 1908. Mss simulata orientalia 6, Orientalische Handschriften digital, Photographs 89 (verso) & 101 (recto), http://resolver.staatsbibliothek-berlin.de/SBB000074F100000000.  
+> Berlin, Staatsbibliothek, *Photographien von ausgewählten Fragmenten aus der Omayyaden-Moschee in Damaskus in verschiedenen Sprachen*, 1908. Mss simulata orientalia 6, Orientalische Handschriften digital, Photographs 89 (verso) & 101 (recto), <http://resolver.staatsbibliothek-berlin.de/SBB000074F100000000>.  
 
 For the most part, these manuscripts are legendaries containing the Lives of numerous other saints and other texts of religious interest, though there are some exceptions, such as T-L, which pairs the Life of Mary the Egyptian with a compilation of texts centered on Chrétien de Troyes’s *Perceval*. The distribution of these manuscripts is primarily centered in France and the UK, with three manuscripts housed in the Bibliothèque nationale de France (BnF), two at the University of Oxford, one in the John Rylands in Manchester, and one in the British Library (BL) in London. The only known records of the smallest fragment of Version T, T-F^2^, are located in the Staatsbibliothek of Berlin.  
 
@@ -37,11 +36,11 @@ The physical size of these manuscripts vary. The largest manuscript in this corp
 Among the T manuscripts, there are no images — neither miniatures nor historiated initials — to be found. Only copy T-E would have included a miniature (approximately 80x65mm) of Mary the Egyptian — most likely depicting the scene in which Zozimas gives her his cloak, based on the surviving miniatures from manuscripts containing other versions of the *Vie* —^[There are sixteen extant medieval manuscript images associated with full French texts of *La vie de sainte Marie l’Égyptienne*. Among these, seven depict the encounter between Zozimas and Mary the Egyptian in which the holy man offers the nude Mary his cloak. For example in the miniature of a late thirteenth-century copy of Version U (Lyon, Bibliothèque municipale, 867, f.71v), Zozimas is shown shyly looking away as he gives his cloak to Mary who stares back at him. Her nude body is entirely enveloped by her long hair, and their hands meet in the center of the miniature.
 ] but this image has been lost due to the mutilation of the manuscript.  
 
-In terms of accessibility, at time of writing, five of the manuscript copies of T have been digitized and are freely accessible online to anyone with an internet connection. These are T-A, T-D, T-E, T-F^1^, and T-F^2^. Two of these, though, are not available in color as T-A’s digitized copy was produced from its black and white microfilm and T-F^2^’s online copy is a digitization of the photographic reproduction of the lost fragment. The only T manuscripts that have not been digitized are all located in the UK. These are T-B, T-C, and T-L.^[There is an ongoing effort at the British Library to digitize more and more of their manuscript collections, but according to their most recent list of fully digitized manuscripts released in 2022, T-L has not yet been digitized. This list is available via Calum Cockburn’s blog post for the *Medieval manuscripts blog* of the British Library on 18 January 2022.] Four of the T manuscripts (T-A, T-C, T-D, and T-E) are available at their respective libraries on microfilm, and there is also a microform copy of T-L available at the Van Pelt Library at the University of Pennsylvania.^[ Unfortunately, I became aware of this microform copy too late to make use of it directly to inform this dissertation. The microforms held at the Van Pelt may be consulted on site in the library’s Microtext Department in Philadelphia, but the reproduction and interlibrary loan of any Van Pelt microforms would require the permission of the repository holding the original manuscript — in this case the BL. A complete list of the Van Pelt microforms may be found here: https://guides.library.upenn.edu/MedievalMSSmicrotext]  Taken together, all of this means that T-B is the only Version T copy whose full contents may only be considered in person in the reading room.^[In the reading room at the Bodleian, readers are permitted to take their own images for research purposes, and so I have been able to inform this dissertation with images of T-B that I took in the fall of 2022. However at the British Library, readers are not permitted to take pictures of certain manuscripts, including manuscript T-L.] While the availability of these manuscripts varies — from in-person consultation to digitized copies or microfilm — this appendix consolidates and contextualizes the scattered information about this corpus in one place, adding particular aspects of the manuscripts that have either not been discussed or systematically treated elsewhere. By preserving and synthesizing these details, this appendix supplements existing modes of access, offering a comprehensive resource for understanding the extant material record of Version T.  
+In terms of accessibility, at time of writing, five of the manuscript copies of T have been digitized and are freely accessible online to anyone with an internet connection. These are T-A, T-D, T-E, T-F^1^, and T-F^2^. Two of these, though, are not available in color as T-A’s digitized copy was produced from its black and white microfilm and T-F^2^’s online copy is a digitization of the photographic reproduction of the lost fragment. The only T manuscripts that have not been digitized are all located in the UK. These are T-B, T-C, and T-L.^[There is an ongoing effort at the British Library to digitize more and more of their manuscript collections, but according to their most recent list of fully digitized manuscripts released in 2022, T-L has not yet been digitized. This list is available via Calum Cockburn’s blog post for the *Medieval manuscripts blog* of the British Library on 18 January 2022.] Four of the T manuscripts (T-A, T-C, T-D, and T-E) are available at their respective libraries on microfilm, and there is also a microform copy of T-L available at the Van Pelt Library at the University of Pennsylvania.^[ Unfortunately, I became aware of this microform copy too late to make use of it directly to inform this dissertation. The microforms held at the Van Pelt may be consulted on site in the library’s Microtext Department in Philadelphia, but the reproduction and interlibrary loan of any Van Pelt microforms would require the permission of the repository holding the original manuscript — in this case the BL. A complete list of the Van Pelt microforms may be found here: <https://guides.library.upenn.edu/MedievalMSSmicrotext>]  Taken together, all of this means that T-B is the only Version T copy whose full contents may only be considered in person in the reading room.^[In the reading room at the Bodleian, readers are permitted to take their own images for research purposes, and so I have been able to inform this dissertation with images of T-B that I took in the fall of 2022. However at the British Library, readers are not permitted to take pictures of certain manuscripts, including manuscript T-L.] While the availability of these manuscripts varies — from in-person consultation to digitized copies or microfilm — this appendix consolidates and contextualizes the scattered information about this corpus in one place, adding particular aspects of the manuscripts that have either not been discussed or systematically treated elsewhere. By preserving and synthesizing these details, this appendix supplements existing modes of access, offering a comprehensive resource for understanding the extant material record of Version T.  
 
 ## T-A
 ### Paris, BnF, Français 23112. ff.334v-344r. Late 13th century, provenance pre-17th century unknown.
-This manuscript, housed at the Richelieu site of the BnF, is a late thirteenth-century codex comprised of 344 parchment folios with some additional front and back laid paper pages.^[These paper pages have visible chainlines and watermarks. The innermost front paper page features a watermark resembling a cluster of grapes, and the outermost back paper page has a watermark of a fleur-de-lis with the initials “CB” on a banner underneath.] The manuscript’s exact provenance before the seventeenth century is not known, but it is known to have been in the possession of Cardinal Richelieu, as noted in the BnF’s online catalog description and confirmed by Ginguené, who mentions that the manuscript was one of those given to the Sorbonne by Richelieu.^[“Ce manuscrit est un de ceux qui furent donnés à la maison de Sorbonne par le cardinal de Richelieu” (112).] The stamp of the Bibliothèque de Sorbonne may be seen in the bottom right corner of f.1r. Following the prayer written in rhyming couplets that concludes this manuscript,^[This prayer begins in the line immediately following the Life of Mary the Egyptian on f.344r with a parted blue and red initial “B” that is two lines high.] there is a date offered on f.344v — written within the text block and in the same hand as the scribe — reading “Explicit iste liber / anno d[o]m[ini] M CC”, but according to the online BnF catalog, “Cette date ne paraît pas être celle de la transcription du manuscrit, dont l’écriture présente tous les caractères du XIIIe siècle.”^[https://archivesetmanuscrits.bnf.fr/ark:/12148/cc52450n]  
+This manuscript, housed at the Richelieu site of the BnF, is a late thirteenth-century codex comprised of 344 parchment folios with some additional front and back laid paper pages.^[These paper pages have visible chainlines and watermarks. The innermost front paper page features a watermark resembling a cluster of grapes, and the outermost back paper page has a watermark of a fleur-de-lis with the initials “CB” on a banner underneath.] The manuscript’s exact provenance before the seventeenth century is not known, but it is known to have been in the possession of Cardinal Richelieu, as noted in the BnF’s online catalog description and confirmed by Ginguené, who mentions that the manuscript was one of those given to the Sorbonne by Richelieu.^[“Ce manuscrit est un de ceux qui furent donnés à la maison de Sorbonne par le cardinal de Richelieu” (112).] The stamp of the Bibliothèque de Sorbonne may be seen in the bottom right corner of f.1r. Following the prayer written in rhyming couplets that concludes this manuscript,^[This prayer begins in the line immediately following the Life of Mary the Egyptian on f.344r with a parted blue and red initial “B” that is two lines high.] there is a date offered on f.344v — written within the text block and in the same hand as the scribe — reading “Explicit iste liber / anno d[o]m[ini] M CC”, but according to the online BnF catalog, “Cette date ne paraît pas être celle de la transcription du manuscrit, dont l’écriture présente tous les caractères du XIIIe siècle.”^[<https://archivesetmanuscrits.bnf.fr/ark:/12148/cc52450n>]  
 The scribe who copied the text of *Marie* has not been identified, but the manuscript is written in a dialect that includes some Picard elements, such as the use of “le” for the feminine singular article and “jou” as a variant spelling of “je.”^[In his edition, Dembowski says the language is “fortement picardisée” (25), but he does not elaborate with many linguistic details.] The scribe carefully avoided the medieval sewing repairs in the parchment when copying, and the writing on each page begins above the top ruling line, which supports the dating of this manuscript to the thirteenth century. The line breaks on each page respect the verse structure of each text. For each line, there is initial letter separation with all of the initial letters of each line written in majuscule and all other letters of the text block written in minuscule. In terms of glosses, the manuscript contains minor corrections throughout, added by a hand other than the original scribe. These corrections combined with the careful formatting of the text throughout the codex suggest that the manuscript was carefully prepared for the purpose of reading.  
 
 The codex contains a total of sixty-three texts, including, of course, Version T of *La vie de sainte Marie L’Égyptienne*, which is the last text in this collection and is preceded by a Life of Catherine of Alexandria. Français 23112 offers 1,526 verses of T without any significant lacunae — making it the most complete of the thirteenth-century copies — and serves as the base copy for Dembowski’s edition.^[On his choice of base copy, Dembowski writes, “Ce choix est grandement simplifié du fait que, comme nous l’avons déjà vu, les mss. B et D donnent des versions très abrégés du récit et que les mss. E et L ont des lacunes considérables. Il ne nous reste donc que A et C. Vu que C est plus récent que A, vu que C a un nombre de leçons inférieures à A, vu que le scribe de A donne un texte très soigné, vu enfin que le texte de C est connu grâce à l’édition de Baker (sans mentionner celle de Cooke), le choix de A s’impose” (30).] In his description, Dembowski offers this short list of other contents in this manuscript: “Il contient aussi une partie du *Poème moral, li Livres de la mort* (en vers) attribué à Helinand, *l’Aventure au chevalier* (en vers) et *li Miracles du clerc de Roem* (en vers) attribué à Thibaut de Vornon, en tout 63 morceaux” (25). Among the many saints’ Lives included in this manuscript, we also find that of another penitent saint from Egypt: Saint Thaïs. The Life of Mary the Egyptian is introduced in the first column of f.334v by the red-ink rubric “Chi [com]mence le vie de marie egyptiene,” and it concludes in the first column of f.344r with the explicit “De nos ames au jugem[en]t. Am[en].” Folio 344 has been cut along its bottom outer corner, resulting in the loss of some text from the manuscript’s concluding prayer, but this damage does not interfere with the Life of Mary the Egyptian.  
@@ -126,7 +125,7 @@ Add. 36614 is in many ways a unique manuscript among the Version T corpus. Unlik
 
 Because circumstances have prevented me from consulting this manuscript in more detail, my own observations of T-L are limited compared to the data I have collected from the other T manuscripts. I cannot independently confirm the exact number of verses of T contained in Add. 36614, but in his edition, Dembowski reports that this copy is missing 240 verses due to missing folios (26),^[“Notre poème a une lacune considérable, car les feuillets qui devaient porter les numéros 282 et 283 ont été arrachés. Il manque ainsi 240 vers” (26).] and the 1907 catalog of the British Museum says that this manuscript contains “about 1,350 lines” (156). This copy of Version T begins without title or rubric, but the initial “T” is drawn in red and is about three lines tall. The word spacing is not entirely consistent in this copy; occasionally, we see the use of initial letter separation, but this practice is not consistent. T-L appears to have been copied entirely by the same scribe, who makes regular use of abbreviations. Roach suggests that this copy of Mary the Egyptian was the addition of a fourteenth-century hand, but Dembowski does not confirm this suggestion.^[On the topic of scribal hands in Add. 36614, Roach writes, “Several hands are involved: Chrétien’s *Perceval* was copied by a scribe who wrote in Francian with a Picard inmixture; the Continuations show at least two hands, the first of which is more definitely Picard; the intercalated *Bliocadran* is by a northeastern scribe; and finally a fourteenth-century hand has added in the last twelve folios a *Vita Mariae Aegyptiacae* in French verse.” (xx)] In terms of dialect in Add. 36614, Micha notes, “Dialecte francien avec influence picarde pour *Perceval le Vieil*” (62), but Version T in this manuscript does not demonstrate the same Picard influence.  
 
-The manuscript’s provenance is not known, but the codex is dated to the second half of the thirteenth century.^[This dating is agreed upon by Micha (62) and Roach (xx) in their respective editions.] The modern history of this manuscript, which is wrapped up in the actions of the controversial bookdealers Joseph Barrois (1785-1855)^[It seems Barrois may either be referred to as “Joseph” or “Paul”; the Ashburnham Library catalog of the auction of the Barrois manuscripts says the collection was “formed by M. Paul Barrois” (iii).] and Guglielmo Libri (1802-1869), is documented in Williman and Corsano’s chapter “In the British Royal Library.” In brief, the fourth Earl of Ashburnham (1797-1878) purchased a collection of more than 700 manuscripts, including Add. 36614 (formerly MS Barrois 1), from Barrois in 1849. Following the Earl’s death, the Barrois Manuscripts of the Ashburnham Library were sold at auction, with Add. 36614 listed as Lot #463. At the time of this auction, the manuscript’s binding is described as “Modern boarded blue morocco, with rich gilt ornaments, joints, g. E. WITH A VERY ANCIENT CARVING IN IVORY (7 ¼ by 3 ½ in.), REPRESENTING THE DEATH OF THE EMPEROR SEPTIMUS SEVERUS, INSERTED IN THE COVER” (Ashburnham Library 171). By the time of the British Museum’s 1907 catalog, this ivory panel has been separated from the rest of the codex and is reidentified as “representing the death of Jacob,” (157). The ivory panel has since been dated to the tenth/eleventh century, and while MS Add. 36614 is housed in the British Library, the ivory panel is kept in the British Museum. The panel is not currently on display there, but it has been photographed and may be consulted online.^[https://www.britishmuseum.org/collection/object/H_1901-1230-1]  
+The manuscript’s provenance is not known, but the codex is dated to the second half of the thirteenth century.^[This dating is agreed upon by Micha (62) and Roach (xx) in their respective editions.] The modern history of this manuscript, which is wrapped up in the actions of the controversial bookdealers Joseph Barrois (1785-1855)^[It seems Barrois may either be referred to as “Joseph” or “Paul”; the Ashburnham Library catalog of the auction of the Barrois manuscripts says the collection was “formed by M. Paul Barrois” (iii).] and Guglielmo Libri (1802-1869), is documented in Williman and Corsano’s chapter “In the British Royal Library.” In brief, the fourth Earl of Ashburnham (1797-1878) purchased a collection of more than 700 manuscripts, including Add. 36614 (formerly MS Barrois 1), from Barrois in 1849. Following the Earl’s death, the Barrois Manuscripts of the Ashburnham Library were sold at auction, with Add. 36614 listed as Lot #463. At the time of this auction, the manuscript’s binding is described as “Modern boarded blue morocco, with rich gilt ornaments, joints, g. E. WITH A VERY ANCIENT CARVING IN IVORY (7 ¼ by 3 ½ in.), REPRESENTING THE DEATH OF THE EMPEROR SEPTIMUS SEVERUS, INSERTED IN THE COVER” (Ashburnham Library 171). By the time of the British Museum’s 1907 catalog, this ivory panel has been separated from the rest of the codex and is reidentified as “representing the death of Jacob,” (157). The ivory panel has since been dated to the tenth/eleventh century, and while MS Add. 36614 is housed in the British Library, the ivory panel is kept in the British Museum. The panel is not currently on display there, but it has been photographed and may be consulted online.^[<https://www.britishmuseum.org/collection/object/H_1901-1230-1>]  
 
 In terms of structure, Add. 36614 is made up of 282 parchment folios, arranged hair-hair-flesh-flesh, with some front and end pages likely inserted when the manuscript was last rebound. The manuscript folios are formatted with two columns per page, and each column has thirty lines with an average height of 7mm each. The width of each column is 74mm. The manuscript has modern foliation written in pencil in the top right corners of the rectos. Some folios have medieval Roman numerals as well, but these appear on a minority of pages. The dimensions of the manuscript are 310x220mm, with a ruled writing space of 240x150mm. The ruling of Add. 36614 was apparently done in pencil and is present throughout the manuscript, but on the folios containing the Life of Mary the Egyptian, this ruling has been almost entirely erased. Add. 36614 lacks quire signatures and rubrics, and there is no medieval table of contents. The manuscript also has no miniatures or frontispieces, but in the empty space of f.268r at the end of the *Conte du Graal* there are the “armes au lion de Flandre, et au-dessus, la devise : ‘Flandres : au : lion’” (Micha 62). Added glosses throughout the codex suggest this manuscript was actively read.  
 
@@ -145,13 +144,13 @@ The provenance of French 6 is a subject of considerable interest. The fragment w
 
 > The reason for the displacement of the original central bifolium by those responsible for the present order is obvious when one considers the fragment. … the perpetrators of this change have found a way to place the beginning of a text at the beginning of the manuscript fragment, to give the impression that the fragment is a complete entity in itself. Furthermore, this text, the ‘Passion de saint Paul,’ is the only one in [MS French 6] which has an initial letter decorated in golf leaf, and is by far the most attractive introductory capital letter of any found in this fragment. (42)  
 
-But from what manuscript was this quire excised? Russell suggests that at least folios 1-8 of French 6 were originally part of British Library Egerton 2710 — a legendary dating to the second half of the thirteenth century — a claim which he supports convincingly with both physical and textual evidence. First, there are no catchwords in French 6, but there is one medieval quire signature “XX” at the very bottom of the center margin of f.8v. Russell makes use of this quire signature to support his argument that French 6 is a continuation of Egerton 2710, which is incomplete following its own quire signature “XIX.” More compellingly, when rearranged in the proper order, f.3 of French 6 is a perfect continuation of the incomplete *Explication du Pater* of Maurice de Sully found in Egerton 2710 (43). Furthermore, Russell highlights the fact that the contents of Egerton 2710 are “very close” (44) to that of BnF Français 19525, the manuscript containing copy D of Version T of the Life of Mary the Egyptian, and in his edition, Dembowski himself suggests T-F^1^ “semble suivre de très près le même texte que le ms. D” (27). The text of copies T-D and T-F^1^ are quite similar,^[There are minor spelling differences between these copies, though T-F^1^ has been more extensively abbreviated by the scribe. T-D and T-F^1^ only noticeably differ in verse 164 where copy D offers “N’out onkes tele meschine” and copy F^1^ offers “N’out el chef plus bele crine.”] but the dimensions, formatting, decorative elements, and material evidence of BnF Français 19525 and Egerton 2710 merit closer attention before drawing any more definitive conclusions about the possible relationship between these codices.^[Based on my own observations of BnF Français 19525 and on the description of Egerton 2710 available on *Arlima* (https://arlima.net/no/4668), BnF Français 19525 is smaller than Egerton 2710, which measures 265x180mm with 40-42 lines per column.] Both BnF Français 19525 and John Rylands French 6 may be consulted online and in the reading room, but at time of writing, access to Egerton 2710 at the British Library is still limited. The likeness between BnF Français 19525 and the first folios of John Rylands French 6, originating from Egerton 2710, merits further attention elsewhere.^[It is difficult to draw definitive conclusions about how any of these Version T copies are related to one another, but Duncan Robertson offers a scheme based on what little we do know of the origins of Version T in which T-E and T-C seem to have a shared source, T-B and T-L seem to have a shared source, and T-A, T-D, and the two fragments seem to be related to one another with T-D and T-F1 the most closely linked (“The Anglo-Norman Verse Life” 30).]  
+But from what manuscript was this quire excised? Russell suggests that at least folios 1-8 of French 6 were originally part of British Library Egerton 2710 — a legendary dating to the second half of the thirteenth century — a claim which he supports convincingly with both physical and textual evidence. First, there are no catchwords in French 6, but there is one medieval quire signature “XX” at the very bottom of the center margin of f.8v. Russell makes use of this quire signature to support his argument that French 6 is a continuation of Egerton 2710, which is incomplete following its own quire signature “XIX.” More compellingly, when rearranged in the proper order, f.3 of French 6 is a perfect continuation of the incomplete *Explication du Pater* of Maurice de Sully found in Egerton 2710 (43). Furthermore, Russell highlights the fact that the contents of Egerton 2710 are “very close” (44) to that of BnF Français 19525, the manuscript containing copy D of Version T of the Life of Mary the Egyptian, and in his edition, Dembowski himself suggests T-F^1^ “semble suivre de très près le même texte que le ms. D” (27). The text of copies T-D and T-F^1^ are quite similar,^[There are minor spelling differences between these copies, though T-F^1^ has been more extensively abbreviated by the scribe. T-D and T-F^1^ only noticeably differ in verse 164 where copy D offers “N’out onkes tele meschine” and copy F^1^ offers “N’out el chef plus bele crine.”] but the dimensions, formatting, decorative elements, and material evidence of BnF Français 19525 and Egerton 2710 merit closer attention before drawing any more definitive conclusions about the possible relationship between these codices.^[Based on my own observations of BnF Français 19525 and on the description of Egerton 2710 available on *Arlima* (<https://arlima.net/no/4668>), BnF Français 19525 is smaller than Egerton 2710, which measures 265x180mm with 40-42 lines per column.] Both BnF Français 19525 and John Rylands French 6 may be consulted online and in the reading room, but at time of writing, access to Egerton 2710 at the British Library is still limited. The likeness between BnF Français 19525 and the first folios of John Rylands French 6, originating from Egerton 2710, merits further attention elsewhere.^[It is difficult to draw definitive conclusions about how any of these Version T copies are related to one another, but Duncan Robertson offers a scheme based on what little we do know of the origins of Version T in which T-E and T-C seem to have a shared source, T-B and T-L seem to have a shared source, and T-A, T-D, and the two fragments seem to be related to one another with T-D and T-F1 the most closely linked (“The Anglo-Norman Verse Life” 30).]  
 
 The folios that would follow f.8 of French 6 are still undiscovered, leaving the door open to the exciting possibility that the missing folios of T-F^1^ could be recovered elsewhere among the unidentified jumbled fragments of some other manuscript collection. Such a discovery would allow for a more elaborate analysis of the possible relationship between copies T-D and T-F^1^, and such a discovery would undoubtedly bring the discoverer the same satisfaction Russell himself describes, “...the satisfaction one gains from discovering the source of a manuscript fragment which has remained separated from its original manuscript for several centuries, stems no doubt from the feeling that one has, in a very small way, reversed the process of time” (46).  
 
 ## T-F^2^
 ### The location of the original fragment — dated to the second half of the 12th century and most likely originating in Europe — is unknown, but a photographic copy may be found here:
-> Berlin, Staatsbibliothek, Photographien von ausgewählten Fragmenten aus der Omayyaden-Moschee in Damaskus in verschiedenen Sprachen, 1908. Mss simulata orientalia 6, Orientalische Handschriften digital, Photographs 89 (verso) & 101 (recto), http://resolver.staatsbibliothek-berlin.de/SBB000074F100000000.
+> Berlin, Staatsbibliothek, Photographien von ausgewählten Fragmenten aus der Omayyaden-Moschee in Damaskus in verschiedenen Sprachen, 1908. Mss simulata orientalia 6, Orientalische Handschriften digital, Photographs 89 (verso) & 101 (recto), <http://resolver.staatsbibliothek-berlin.de/SBB000074F100000000>.
 
 
 Giannini and Minervini provide devastating clarity as to the current status of T-F^2^, “Up to the beginning of the twentieth century, four Old French pieces were stored in the Qubbat al-khazna adjacent to the Umayyad Mosque in Damascus. All of them are now nowhere to be found” (331).^[The other Old French fragments found in the Damascus geniza include an apologetic poem against Judaic criticisms, a bifolium of *Fierabras*, and scraps of *Enfances Godefroi*.]  Of the Old French fragments documented in Damascus, Adolf Tobler says that T-F^2^ is of less importance than the bifolium of *Fierabras*,^[“Von geringerer Bedeutung noch als die Stücke des *Fierabras* ist, was wir auf den zwei Seiten eines nicht ganz unbeschädigten Pergamentblättchens…” (966)] but T-F^2^ is of great importance to the study of Version T of *La vie de sainte Marie l’Égyptienne* as it represents the only physical, textual evidence that the T poem traveled as far as the Middle East. While the original parchment fragment of T-F^2^ is currently considered lost — perhaps surviving undocumented in either Damascus or possibly Istanbul —^[In their introduction to *The Damascus Fragments* (2020), D’Ottone Rambach, Hirschler, and Vollandt provide a detailed account of the last known locations for the full corpus of the fragments of the Qubbat al-khazna, and they reframe this history in such a way that the role of the Ottomans in managing this research is made much clearer and more active. They write, “In particular, when it comes to the temporary loan of some of the fragments to Germany, it appears very clear that the Ottomans, both in Damascus and in Istanbul, made all the efforts needed in order to document the fragments through photographs and ensure that they would get them back” (38). In addition to recounting the return of the collection of fragments photographed in Berlin to Damascus in 1909, they describe the existence of a handlist and a duplicate set of photographs first produced by the Ottomans prior to loaning the fragments to the Germans to ensure the return of all the loaned fragments. Like the original fragments themselves though, the location of this handlist and set of photographs is also unknown.] its contents are preserved through the photographs taken by German philologists at the turn of the twentieth century. These photographs are housed in the Staatsbibliothek of Berlin and have been digitized, allowing for continued study.  
