--- a/chapter2-1.qmd
+++ b/chapter2-1.qmd
@@ -75,8 +75,48 @@ The primary aim of my text encoding strategy is to ensure that each editorial ch
 The selected verses below comprise the second portrait of Mary as she lives ascetically in the desert, a passage in which the T-E copyist inserts a few unique whole verses and word choices (vv.614, 650-652, 668, 676, & 700). I have selected the following passage of T-E to illustrate my digital editing methods on a smaller scale than the material featured in all of Appendix 2. I chose to isolate T-E here due to several unique aspects of this copy. First, T-E has received little attention as a witness of Version T because it is incomplete; approximately sixty verses are missing near the end of the narrative due to the mutilation of folio 117. If intact, T-E would provide the longest extant witness of Version T as well as the only miniature of Mary the Egyptian associated with T (now lost). Because T-E is a somewhat more difficult manuscript copy to read — featuring text that is highly abbreviated and inconsistent in word spacing — T-E more clearly demonstrates the benefit of my editorial approach which presents a transcription of T-E with increasing levels of editorial intervention. For this excerpt, I have also inserted special characters to represent the many scribal abbreviations present in the manuscript. These special characters have been selected in alignment with the recommendations of the Medieval Unicode Font Initiative (MUFI), a group of scholars and font designers committed to helping medievalists encode and display special characters found in medieval texts written in the Latin alphabet. Such special characters do not properly render in all fonts, but Junicode — a font developed by Peter Baker of the University of Virginia —  has been designed for optimal compatibility with the MUFI guidelines. Thus, the Junicode font family has been applied to this entire dissertation project. The following directory specifies which codes have been used to render each of the special characters present in this excerpt of T-E, including screengrabs from the digitized manuscript for reference:
 
 ## Directory of Special Characters:^[For macron abbreviations involving vowels (ā, ē, ī, and ō), special character codes were not necessary.]
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| Graphemes                                                                             | Code       | Description                                          | Use                            |
++=======================================================================================+============+======================================================+================================+
+| ![Fig. 2.3: f.115va, v.690](images/Fig2.03T-E_f.115va_v.690.png){fig-align="left"}    | `&#x02BC;` | modifier letter apostrophe                           | Q&#x02BC; → Que                |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.4: f.115rd, v.641](images/Fig2.04T-E_f.115rd_v.641.png){fig-align="left"}    | `&#x02C8;` | modifier letter vertical line                        | Q&#x02C8; → Qui                |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.5: f.115rd, v.649](images/Fig2.05T-E_f.115rd_v.649.png){fig-align="left"}    | `&#x0300;` | combining grave accent                               | mlt&#x0300; → molt             |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.6: f.115rd, v.648](images/Fig2.06T-E_f.115rd_v.648.png){fig-align="left"}    | `&#x0305;` | combining overline                                   | q&#x0305; → que                |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.7: f.115va, v.658](images/Fig2.07T-E_f.115va_v.658.png){fig-align="left"}    |  &#12291;  |    &#12291;                                          | bn&#x0305; → bien              |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.8: f.115va, v.659](images/Fig2.08T-E_f.115va_v.659.png){fig-align="left"}    |  &#12291;  |    &#12291;                                          | Qnt&#x0305; → Quant            |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.9: f.115va, v.663](images/Fig2.09T-E_f.115va_v.663.png){fig-align="left"}    | `&#x033E;` | combining vertical tilde                             | m&#x033E;veille → merveille    |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.10: f.115rd, v.643](images/Fig2.10T-E_f.115rd_v.643.png){fig-align="left"}   | `&#x030D;` | combining vertical line above                        | poit&#x030D;ne → poitrine      |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.11: f.115rd, v.646](images/Fig2.11T-E_f.115rd_v.646.png){fig-align="left"}   |  &#12291;  |    &#12291;                                          | q&#x030D; → qui                |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.12: f.115vb, v.701](images/Fig2.12T-E_f.115vb_v.701.png){fig-align="left"}   |  &#12291;  |    &#12291;                                          | p&#x030D;st → prist            |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.13: f.115rd, v.614](images/Fig2.13T-E_f.115rd_v.614.png){fig-align="left"}   | `&#xA751;` | Latin small letter ‘p’ with stroke through descender | &#xA751; → par                 |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.14: f.115rd, v.626](images/Fig2.14T-E_f.115rd_v.626.png){fig-align="left"}   | `&#xA76F;` | Latin small letter ‘con’                             | &#xA76F; → con or com          |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.15: f.115rd, v.640](images/Fig2.15T-E_f.115rd_v.640.png){fig-align="left"}   | `&#xA770;` | modifier letter ‘us’                                 | v&#xA770; → vos                |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.16: f.115rd, v.646](images/Fig2.16T-E_f.115rd_f.646.png){fig-align="left"}   |  &#12291;  |    &#12291;                                          | pl&#xA770; → plus              |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.17: f.115rd, v.615](images/Fig2.17T-E_f.115rd_v.615.png){fig-align="left"}   | `&#xF158;` | Latin abbreviations sign small ‘et’ with stroke      | &#xF158; → &amp;               |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.18: f.115rd, v.623](images/Fig2.18T-E_f.115rd_v.623.png){fig-align="left"}   | `&#xF1C1;` | combining abbreviation mark superscript ‘ra’         | d&#xF1C1;pel → drapel          |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.19: f.115rd, v.649](images/Fig2.19T-E_f.115rd_v.649.png){fig-align="left"}   |  &#12291;  |    &#12291;                                          | g&#xF1C1;ns → grans            |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
+| ![Fig. 2.20: f.115va, v.672](images/Fig2.20T-E_f.115va_v.672.png){fig-align="left"}   | `&#x1DD1;` | combining abbreviation mark superscript ‘ur’         | m&#x1DD1; → mur                |
++---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
 
-[INSERT TABLE OF SPECIAL CHARACTERS W/ FIGURES]
+: {.hover tbl-colwidths="[30,20,30,20]"}
+
 
 ## T-E, Paris, BnF Arsenal, 3516, ff.115r, col.d, line 13 - 115v, col.b, line 2
 For reference, a full color digitization of the manuscript is available via Gallica [HERE](https://gallica.bnf.fr/ark:/12148/btv1b55000507q/f232.item).
